feat(backend): setup security config and data seeder